# plat

./: .gitignore  Cargo.toml  DEVELOPMENT.md  package-lock.json  package.json
apps/cli/: Cargo.toml  README.md
apps/cli/src/: cli.rs  main.rs
apps/cli/src/commands/: daemon.rs  mod.rs  plugin.rs
apps/plat/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
apps/plat/src/: main.tsx
apps/plat/src-tauri/: Cargo.toml  tauri.conf.json
apps/plat/src-tauri/capabilities/: daemon.json  default.json
apps/plat/src-tauri/src/: core.rs  host_service.rs  lib.rs  main.rs  typings.rs
apps/plat/src-tauri/src/assets/: daemon_asset.rs  host_assets.rs  local_daemon_asset.rs  mod.rs  plugin_asset.rs  remote_daemon_asset.rs  template_asset.rs
apps/plat/src-tauri/src/commands/: append_daemon.rs  get_daemons.rs  mod.rs  open_daemon_window.rs  remove_daemon.rs  update_daemon_password.rs
apps/plat/src-tauri/src/core/: app_util.rs  mod.rs  profile.rs
apps/plat/src/components/: header.tsx
apps/plat/src/components/channel-provider/: index.tsx
apps/plat/src/components/channel-provider/confirm-install-plugin/: index.tsx  typings.ts
apps/plat/src/components/channel-provider/confirm-signature/: index.tsx  typings.ts
apps/plat/src/components/daemon-control/: modal.tsx
apps/plat/src/components/eruda-provider/: atom.ts  index.tsx
apps/plat/src/components/internal-pages/isolate-setting/: index.tsx
apps/plat/src/components/isolate/: create-isolate-card.tsx  delete-isolate-button.tsx  isolate-card-modal-content.tsx  isolate-card.tsx
apps/plat/src/components/isolate-drawer/: index.tsx
apps/plat/src/components/isolate-drawer/buttons/: drawer-toggler.tsx  entry-button.tsx  setting-button.tsx
apps/plat/src/components/isolate-drawer/hooks/: use-isolate-drawer.ts
apps/plat/src/components/navigation/: index.tsx
apps/plat/src/components/plat-provider/: index.tsx
apps/plat/src/components/plugins/: delete-plugin-button.tsx
apps/plat/src/components/plugins/install-plugin-button/: index.tsx
apps/plat/src/components/stage/: empty-stage.tsx  inner-stage.tsx  standalone-stage.tsx
apps/plat/src/components/stage/hooks/: use-stage.tsx
apps/plat/src/hooks/: use-daemons.ts
apps/plat/src/hooks/core/: use-daemon.ts  use-isolate.ts
apps/plat/src/models/: core.ts
apps/plat/src/routes/: __root.tsx  index.lazy.tsx  index.tsx  isolate.$pubkey.lazy.tsx  isolate.$pubkey_.settings.plugin.lazy.tsx  layout.tsx
apps/plat/src/routes/components/: header.tsx
apps/plat/src/routes/components/create-daemon/: create-daemon-fab.tsx  create-daemon-modal.tsx  index.tsx
apps/plat/src/routes/components/daemon-card/: delete-daemon-button.tsx  delete-isolate-button.tsx  edit-daemon-button.tsx  index.tsx  isolate-card-modal-content.tsx
apps/plat/src/routes/components/local-daemon-card/: delete-daemon-button.tsx  index.tsx
apps/plat/src/routes/components/remote-daemon-card/: index.tsx
apps/plat/src/routes/daemon/: index.tsx
apps/plat/src/routes/daemon/common/: daemon-frame.tsx
apps/plat/src/routes/daemon/local/: index.tsx
apps/plat/src/routes/daemon/remote/: index.tsx
apps/plat/src/routes/hooks/: use-open-daemon.ts
apps/plat/src/routes/local-daemon/: index.tsx
apps/plat/src/routes/templates/: index.tsx
platx/platx-bundler/: Cargo.toml
platx/platx-bundler/src/: tarer.rs  untarer.rs
platx/platx-cli/: Cargo.toml
platx/platx-cli/src/: cli.rs  main.rs
platx/platx-core/: Cargo.toml
platx/platx-core/src/: lib.rs  plat.rs  platx.rs  platx_config.rs
platx/platx-core/src/bundler/: tarer.rs  untarer.rs
platx/platx-core/src/platx/: daemon.rs  mod.rs  server.rs
platx/platx-core/src/utils/: mod.rs
platx/platx-runner/: Cargo.toml
platx/platx-runner/src/: lib.rs  platx.rs  platx_config.rs
platx/platx-runner/src/wit/: world.wit
src/: App.tsx  main.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: plat-profile.json
src-tauri/src/: core.rs  daemon.rs  lib.rs  main.rs
src-tauri/src/core/: dto.rs  isolate.rs  plat.rs  plugin.rs  profile.rs  signature_box.rs  tools.rs
src-tauri/src/core/wit/: world.wit
src/components/: header.tsx
src/components/internal-pages/visiting-card/: index.tsx
src/components/isolate/: create-isolate-card.tsx  isolate-card-modal-content.tsx  isolate-card.tsx
src/components/isolate-drawer/: entry-button.tsx  index.tsx
src/components/isolate-drawer/buttons/: account-toggler.tsx  drawer-button.tsx  entry-button.tsx  setting-button.tsx
src/components/plugins/: delete-plugin-button.tsx  plugin-card.tsx
src/components/plugins/install-plugin-button/: index.tsx
src/components/stage/: index.tsx  inner-stage.tsx  unknown-stage.tsx
src/components/stage/hooks/: use-stage.tsx
src/hooks/core/: use-isolate.ts  use-profile.ts
src/models/: core.ts
src/routes/: index.lazy.tsx  isolate.$pubkey.lazy.tsx  isolate.$pubkey_.settings.lazy.tsx  isolate.$pubkey_.settings.plugin.lazy.tsx  new.lazy.tsx  new_.generate.lazy.tsx  new_.import.lazy.tsx
