[workspace]
members = [
  "apps/plat/src-tauri",
  "apps/cli",
  "packages/daemon",
  "packages/plugin",
  "packages/bundler",
]
resolver = "2"
[workspace.dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tar = "0.4.41"
flate2 = "1.0.31"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "rustls-tls",
] }
