[package]
name = "platx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
reqwest = { version = "0.12", features = ["stream"] }
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
urlencoding = "2.1.3"
url = "2.5.2"

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
