[package]
name = "platx-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
wasmtime = "24.0.0"
wasmtime-wasi = "24.0.0"
urlencoding = "2.1.3"
url = "2.5.2"

tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
wasmtime-wasi-http = "24.0.0"
hyper = "1.4.1"
http-body-util = "0.1.2"
