[package]
name = "platx-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { version = "0.7.5" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["full"] }
wasmtime = "23.0.1"
wasmtime-wasi = "23.0.1"
