[package]
name = "plat"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.10", features = [] }
tauri-plugin-shell = "2.0.0-rc.3"
tauri-plugin-dialog = "2.0.0-rc.5"
base64 = { version = "0.22.1" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }

tokio.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest.workspace = true
daemon.path = "../../../packages/daemon"
bundler.path = "../../../packages/bundler"
plugin.path = "../../../packages/plugin"
urlencoding = "2.1.3"
axum = { version = "0.7.5", features = ["ws"] }
futures-util = "0.3.30"
